[package]
name = "scrub-obsolete"
edition = "2021"
version.workspace = true
license = "GPL-3.0+"

[dependencies]
breezyshim = { workspace = true, features = ["debian"] }
deb822-lossless = { workspace = true }
debian-analyzer = { path = "../analyzer", features = ["udd", "svp"] }
debian-control = { workspace = true }
debversion = { workspace = true, features = ["sqlx"] }
distro-info = "0.4.0"
env_logger.workspace = true
lazy_static.workspace = true
log.workspace = true
regex = "1.10.6"
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
clap = { workspace = true, features = ["derive", "env"], optional = true }
async-trait = "0.1"
svp-client = { workspace = true }

[features]
default = ["cli"]
cli = ["dep:clap"]

[[bin]]
name = "find-dummy-transitional"
path = "src/bin/find-dummy-transitional.rs"
required-features = ["cli"]

[dev-dependencies]
maplit.workspace = true
