[package]
name = "deb-transition-apply"
edition = "2021"
version.workspace = true
license = "GPL-3.0+"

[lib]

[dependencies]
breezyshim.workspace = true
clap = { workspace = true, features = ["derive"], optional = true }
deb822-lossless = "0.1.26"
debian-analyzer = { version = "0.158.14", path = "../analyzer" }
debian-control.workspace = true
env_logger = { workspace = true, optional = true }
lazy-regex.workspace = true
lazy_static.workspace = true
log.workspace = true
regex = "1.10.6"

[features]
cli = ["dep:clap", "dep:env_logger"]

[[bin]]
name = "deb-transition-apply"
path = "src/main.rs"
required-features = ["cli"]
