[package]
name = "yaml-edit"
version = "0.1.0"
edition = "2021"
authors = ["Jelmer Vernooij <jelmer@debian.org>"]
description = "Lossless YAML editor that preserves formatting"
license = "GPL-2.0-or-later"

[dependencies]
indexmap = { workspace = true }
rowan = "0.16"

[dev-dependencies]
tempfile.workspace = true
